[project]
name = "fint"
version = "0.0.1"
dependencies = [
    "netcdf4",
    "xarray",
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "cartopy",
    "shapely",
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

#[tool.setuptools.packages]
#find = {}  # Scan the project directory with the default parameters


[project.scripts]
fint = "fint.fint:fint"
